@@ -58,12 +58,21 @@ convertParamSetToIrace = function(par.set, as.chars = FALSE) {
   } else {
     lines = collapse(lines, "\n")
     params = irace::readParameters(text = lines, digits = .Machine$integer.max)
+
     # assert that the boundaries have the correct class and values
+    pids = getParamIds(par.set, )
     for (i in seq_along(par.set$pars)) {
-      if (par.set$pars[[i]]$type %in% c("numeric", "numericvector"))
-        params$boundary[[i]] = as.numeric(unlist(par.set$pars[[i]][c("lower", "upper")]))
-      else if (par.set$pars[[i]]$type %in% c("integer", "integervector"))
-        params$boundary[[i]] = as.integer(params$boundary[[i]])
+      p = par.set$pars[[i]]
+      g
+      if (isNumeric(p, include.int = TRUE)) {
+        for (j in seq_len(p$len)) {
+          irace.pid = if (p$len == 1L) p$id else paste(p$id, j, sep = "")
+          if (p$type %in% c("numeric", "numericvector"))
+            params$boundary[[irace.pid]] = as.numeric(unlist(par.set$pars[[i]][c("lower", "upper")]))
+          else if (par.set$pars[[i]]$type %in% c("integer", "integervector"))
+            params$boundary[[i]] = as.integer(params$boundary[[i]])
+        }
+      }
     }
     return(params)
   }
