@@ -6,6 +6,7 @@ ParamHelpers_1.8:
   starting the extra-name with a dot. These elements wll not be contained is
   as.data.frame(opt.path) when converted.
 - make*Param argument 'requires' now accepts expressions and quote'd expressions.
+- getParamIds is now S3 and also callable on type "Param"
 - new functions
 -- getTypeStringsNumeric, getTypeStringsDiscrete
 -- filterParamsNumeric, filterParamsDiscrete
